@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.15 2004/05/07 01:14:49 xtraeme Exp $
+# $NetBSD: Makefile,v 1.16 2004/07/25 14:00:21 minskim Exp $
 #
 
-DISTNAME=		aMule-1.2.6
+DISTNAME=		aMule-1.2.8
 PKGNAME=		${DISTNAME:S/aMule/amule/}
-PKGREVISION=		1
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=amule/}
 EXTRACT_SUFX=		.tar.bz2
