@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2004/03/08 22:15:30 jmmv Exp $
+$NetBSD: distinfo,v 1.5 2004/07/25 14:00:21 minskim Exp $
 
-SHA1 (aMule-1.2.6.tar.bz2) = c0f77313c4da13da86bacdb793406f3f68376423
-Size (aMule-1.2.6.tar.bz2) = 1398755 bytes
+SHA1 (aMule-1.2.8.tar.bz2) = fac6f73f5068b326f45e08cded3b81af329c4226
+Size (aMule-1.2.8.tar.bz2) = 2039251 bytes
