@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6673 2004/07/25 12:28:22 wiz Exp $
+$NetBSD: CHANGES,v 1.6674 2004/07/25 14:00:21 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3563,3 +3563,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated nbsed to 20040725 [grant 2004-07-25]
 	Updated aspell to 0.50.5nb1 [grant 2004-07-25]
 	Updated NeoPop-SDL to 0.2 [wiz 2004-07-25]
+	Updated amule to 1.2.8 [minskim 2004-07-25]
